a bunch of work on the gallery (not done yet)

--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -19,5 +19,10 @@
         </div>
 
         $body$
+
+	<div id="footer">
+	  Site generated
+	  by <a href="http://jaspervdj.be/hakyll/">hakyll</a>.
+	</div>
     </body>
 </html>
