--- a/web/css/default.css
+++ b/web/css/default.css
@@ -15,3 +15,19 @@ div#navigation a {
     padding: 3px 10px 3px 10px;
     margin: 0px 10px 0px 10px;
 }
+
+div#footer {
+    padding-top: 50px;
+    text-align: center;
+    font-size: small;
+}
+
+div#exampleimg {
+    padding-top: 30px;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+div#examplesrc {
+    padding-top: 30px;
+}
