gallery now works, with auto-built examples

--- a/web/templates/example.html
+++ b/web/templates/example.html
@@ -2,7 +2,7 @@
 <h2>$title$</h2>
 $description$
 <div id="exampleimg">
-<a href="$path$">
+<a href="$htmlurl$">
 <img border="0"
      src="$pngurl$">
 </a>
