--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -13,7 +13,7 @@
         <div id="navigation">
             <a href="/">Home</a>
 	    <a href="/download.html">Download</a>
-            <a href="/documentation.html">Documentation</a>
+            <a href="/documentation.html">Docs</a>
 	    <a href="/gallery.html">Gallery</a>
 	    <a href="/community.html">Community</a>
         </div>
