--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -7,6 +7,7 @@
         <title>Diagrams - $title$</title>
         <link rel="stylesheet" type="text/css" href="/css/default.css" />
         <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
+	<link rel="shortcut icon" href="/diagrams.ico" />
     </head>
     <h2>Diagrams: $title$</h2>
     <body>
