javascript to make manual TOC collapsible (doesn't work yet)

--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -8,6 +8,19 @@
         <link rel="stylesheet" type="text/css" href="/css/default.css" />
         <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 	<link rel="shortcut icon" href="/diagrams.ico" />
+
+	<script type="text/javascript" src="/js/listCollapse.js"></script>
+	<script type="text/javascript">
+	window.onload = function () {
+
+	  //choose one of these options
+
+	  //option 1 - no auto-child-collapse
+	  // compactMenu('someID',false,'&plusmn; ');
+
+	  //option 2 - auto-child-collapse
+	  compactMenu('toc',true,'&plusmn; ');
+        </script>
     </head>
     <body>
         <br />
