--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 	<link rel="shortcut icon" href="/diagrams.ico" />
 
+        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 	<script type="text/javascript" src="/js/listCollapse.js"></script>
 	<script type="text/javascript">
 	window.onload = function () {
