better styling for user manual TOC, and comment out list-collapsing JS

--- a/web/css/default.css
+++ b/web/css/default.css
@@ -72,3 +72,8 @@ div.warning {
     border-width: thin;
     background-color: #ffdddd;
 }
+
+div.contents ul {
+    list-style-type: none;
+    line-height: 50%;
+}
