redesigned gallery, new build process using diagrams-builder, and import some new examples

--- a/web/templates/example.html
+++ b/web/templates/example.html
@@ -1,15 +1,7 @@
-<div id="example" align="center">
-<h2>$title$</h2>
-$description$
+<div id="example" style="display: inline-block">
 <div id="exampleimg">
 <a href="$htmlurl$">
-<img border="0"
-     src="$pngurl$">
+<img border="0" width="175" height="175" src="$svgurl$">
 </a>
 </div>
-Author: <b><a href="$authorurl$">$author$</a></b><br />
-Tags: $tags$<br />
-Added $date$<br />
-
-<p><hr /></p>
 </div>
