--- a/web/templates/exampleHi.html
+++ b/web/templates/exampleHi.html
@@ -1,12 +1,18 @@
 <div id="examplesrc">
-$title$ example by <a href="$authorurl$">$author$</a>:
-<br />
-<br />
+<h3>$title$</h3>
+
 $description$
-<div id="exampleimg">
+
+<br />
+<br />
+<div id="exampleimg" align="center">
 <img border="0"
-     src="$pngurl$">
+     src="$svgurl$">
 </div>
 <font size="-1"><a href="/$path$">Raw source code</a></font><br/>
 $body$
+
+Author: <b><a href="$authorurl$">$author$</a></b><br />
+Tags: $tags$<br />
+Added $date$<br />
 </div>
