Fix inclusion of icons in user manual

--- a/web/css/default.css
+++ b/web/css/default.css
@@ -50,7 +50,7 @@ code a {
 }
 
 div.todo:before {
-    content: url(icons/towrite.png);
+    content: url(/manual/icons/towrite.png);
     float: right;
 }
 
@@ -62,7 +62,7 @@ div.todo {
 }
 
 div.warning:before {
-    content: url(icons/warning.png);
+    content: url(/manual/icons/warning.png);
     float: right;
 }
 
