add web page for release notes

--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -48,7 +48,9 @@
 		list</a></li>
 		<li><a href="http://code.google.com/p/diagrams/issues/list">Bug
 		tracker</a></li>
+              </ul>
 	    </li>
+	    <li><a href="/releases.html">Releases</a></li>
 	  </ul>
         </div>
 
