use 'class' instead of 'id' for example images

--- a/web/templates/example.html
+++ b/web/templates/example.html
@@ -1,5 +1,5 @@
-<div id="example" style="display: inline-block">
-<div id="exampleimg">
+<div class="example" style="display: inline-block">
+<div class="exampleimg">
 <a href="$htmlurl$">
 <img border="0" width="175" height="175" src="$svgurl$">
 </a>
