--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -23,7 +23,7 @@
     <body>
       <div id="wrap">
         <div id="header">
-	  <img src="/images/Logo.png" height="50"> Haskell drawing framework
+	  <img src="/images/Logo.png" height="50" /> Haskell drawing framework
 	</div>
 
         <div id="navigation">
@@ -56,7 +56,7 @@
 
 	<div id="content">
 	<h3>$title$</h3>
-	<hr>
+	<hr />
         $body$
 	</div>
 
