yet more HTML validation

--- a/web/templates/exampleHi.html
+++ b/web/templates/exampleHi.html
@@ -2,11 +2,10 @@
 
 $description$
 
-<div id="exampleimg" align="center">
-<img border="0"
-     src="$svgurl$">
+<div class="exampleimg" style="text-align: center">
+<img src="$svgurl$" />
 </div>
-<font size="-1"><a href="/$path$">Raw source code</a></font><br/>
+<span style="font-size: small"><a href="/$path$">Download raw source code</a></span><br />
 $body$
 
 Author: <b><a href="$authorurl$">$author$</a></b><br />
