switch back to PNG for gallery, and generate small thumbnail images separately so they look good

--- a/web/templates/exampleHi.html
+++ b/web/templates/exampleHi.html
@@ -3,7 +3,7 @@
 $description$
 
 <div class="exampleimg" style="text-align: center">
-<img src="$svgurl$" />
+<img src="$pngurl$" />
 </div>
 <span style="font-size: small"><a href="/$path$">Download raw source code</a></span><br />
 $body$
