--- a/web/templates/example.html
+++ b/web/templates/example.html
@@ -1,7 +1,7 @@
 <div class="example" style="display: inline-block">
 <div class="exampleimg">
 <a href="$htmlurl$">
-<img width="175" height="175" src="$svgurl$" title="$title$" />
+<img width="175" height="175" src="$thumbpngurl$" title="$title$" />
 </a>
 </div>
 </div>
