put gallery example author information in a better place

--- a/web/templates/exampleHi.html
+++ b/web/templates/exampleHi.html
@@ -5,8 +5,10 @@ $description$
 <div class="exampleimg" style="text-align: center">
 <img src="$pngurl$" />
 </div>
-<span style="font-size: small"><a href="/$path$">Download raw source code</a></span><br />
+Author: <b><a href="$authorurl$">$author$</a></b>
+
+<p><span style="font-size: small"><a href="/$path$">Download raw source code</a></span><br /></p>
+
 $body$
 
-Author: <b><a href="$authorurl$">$author$</a></b><br />
 </div>
