work on updating user manual for 0.6 release (while unable to sleep on plane DC -> Frankfurt)

--- a/web/css/default.css
+++ b/web/css/default.css
@@ -110,7 +110,7 @@ div.warning {
     padding: 20px;
     border-style: solid;
     border-width: thin;
-    background-color: #ffdddd;
+    background-color: #ffffdd;
 }
 
 div.contents ul {
