fix outdated bug tracker link

--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -46,8 +46,7 @@
 		<li><a href="http://webchat.freenode.net?channels=diagrams">IRC channel</a></li>
 		<li><a href="http://groups.google.com/group/diagrams-discuss">Mailing
 		list</a></li>
-		<li><a href="http://code.google.com/p/diagrams/issues/list">Bug
-		tracker</a></li>
+		<li><a href="/community.html">Bug trackers</a></li>
               </ul>
 	    </li>
 	    <li><a href="/releases.html">Releases</a></li>
