--- a/web/templates/gallery.html
+++ b/web/templates/gallery.html
@@ -1,3 +1,4 @@
+$for(examples)$
 <div class="example" style="display: inline-block">
 <div class="exampleimg">
 <a href="$htmlurl$">
@@ -5,3 +6,4 @@
 </a>
 </div>
 </div>
+$endfor$
