start new tutorial, and update more links to quick start etc.

--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -32,7 +32,7 @@
 	    <li><a href="/download.html">Installation</a></li>
             <li><a href="/documentation.html">Documentation</a>
 	      <ul>
-		<li><a href="/doc/quickstart.html">Quick start tutorial</a></li>
+		<li><a href="/documentation.html">Tutorials</a></li>
 		<li><a href="/doc/manual.html">User manual</a></li>
 		<li><a href="/haddock/index.html">API reference</a></li>
 		<li><a href="http://haskell.org/haskellwiki/Diagrams">Wiki</a></li>
