add margin to end of source code so there's space on the right after scrolling
Thanks to Reed Rosenbluth for the fix!

--- a/web/css/default.css
+++ b/web/css/default.css
@@ -79,6 +79,10 @@ div.dia-lhs {
     overflow: auto;
 }
 
+div.dia-lhs code.sourceCode {
+    margin-right: 20px;
+}
+
 code a {
     color: #330099;
     text-decoration: none;
