--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -3,8 +3,14 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>Diagrams - $title$</title>
+
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+	<!-- Bootstrap -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="/css/bootstrap.min.css" rel="stylesheet">
+
         <link rel="stylesheet" type="text/css" href="/css/default.css" />
         <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 	<link rel="shortcut icon" href="/diagrams.ico" />
@@ -21,6 +27,9 @@
 	-->
     </head>
     <body>
+      <script src="https://code.jquery.com/jquery.js"></script>
+      <script src="/js/bootstrap.min.js"></script>
+
       <div id="wrap">
         <div id="header">
 	  <img src="/images/Logo.png" height="50" /> Haskell drawing framework
@@ -65,3 +74,4 @@
       </div>
     </body>
 </html>
+
