--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -2,76 +2,85 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-    <head>
-        <title>Diagrams - $title$</title>
+  <head>
+    <title>Diagrams - $title$</title>
 
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-	<!-- Bootstrap -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
 
-        <link rel="stylesheet" type="text/css" href="/css/default.css" />
-        <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
-	<link rel="shortcut icon" href="/diagrams.ico" />
+    <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
+    <link rel="shortcut icon" href="/diagrams.ico" />
 
-        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  </head>
+  <body>
 
-	<!--
-	<script type="text/javascript" src="/js/listCollapse.js"></script>
-	<script type="text/javascript">
-	window.onload = function () {
-	  compactMenu('toc',true,'&plusmn; ');
-	}
-        </script>
-	-->
-    </head>
-    <body>
-      <script src="https://code.jquery.com/jquery.js"></script>
-      <script src="/js/bootstrap.min.js"></script>
-
-      <div id="wrap">
-        <div id="header">
-	  <img src="/images/Logo.png" height="50" /> Haskell drawing framework
-	</div>
-
-        <div id="navigation">
-	  <ul>
-            <li><a href="/">About</a></li>
-	    <li><a href="/download.html">Installation</a></li>
-            <li><a href="/documentation.html">Documentation</a>
-	      <ul>
-		<li><a href="/documentation.html">Tutorials</a></li>
-		<li><a href="/doc/manual.html">User manual</a></li>
-		<li><a href="/haddock/index.html">API reference</a></li>
-		<li><a href="http://haskell.org/haskellwiki/Diagrams">Wiki</a></li>
-		<li><a href="http://www.haskell.org/haskellwiki/Diagrams/FAQ">FAQ</a></li>
-              </ul>
-	    </li>
-	    <li><a href="/gallery.html">Gallery</a></li>
-	    <li><a href="/community.html">Community</a>
-	      <ul>
-		<li><a href="http://webchat.freenode.net?channels=diagrams">IRC channel</a></li>
-		<li><a href="http://groups.google.com/group/diagrams-discuss">Mailing
-		list</a></li>
-		<li><a href="/community.html">Bug trackers</a></li>
-              </ul>
-	    </li>
-	    <li><a href="/releases.html">Releases</a></li>
-	  </ul>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Diagrams</a>
         </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
-	<div id="content">
+    <div class="container">
+      <div id="navigation">
+	<ul>
+          <li><a href="/">About</a></li>
+	  <li><a href="/download.html">Installation</a></li>
+          <li><a href="/documentation.html">Documentation</a>
+	    <ul>
+	      <li><a href="/documentation.html">Tutorials</a></li>
+	      <li><a href="/doc/manual.html">User manual</a></li>
+	      <li><a href="/haddock/index.html">API reference</a></li>
+	      <li><a href="http://haskell.org/haskellwiki/Diagrams">Wiki</a></li>
+	      <li><a href="http://www.haskell.org/haskellwiki/Diagrams/FAQ">FAQ</a></li>
+            </ul>
+	  </li>
+	  <li><a href="/gallery.html">Gallery</a></li>
+	  <li><a href="/community.html">Community</a>
+	    <ul>
+	      <li><a href="http://webchat.freenode.net?channels=diagrams">IRC channel</a></li>
+	      <li><a href="http://groups.google.com/group/diagrams-discuss">Mailing
+		  list</a></li>
+	      <li><a href="/community.html">Bug trackers</a></li>
+            </ul>
+	  </li>
+	  <li><a href="/releases.html">Releases</a></li>
+	</ul>
+      </div>
+
+      <div id="content">
 	<h3>$title$</h3>
 	<hr />
         $body$
-	</div>
-
-	<div id="footer">
-	  Site generated
-	  by <a href="http://jaspervdj.be/hakyll/">hakyll</a>.
-	</div>
       </div>
-    </body>
-</html>
 
+      <div id="footer">
+	<div class="container">
+	  <p class="text-muted credit">Site generated
+	  using <a href="http://hackage.haskell.org/package/shake">shake</a>, <a href="http://jaspervdj.be/hakyll/">hakyll</a>,
+	  and <a href="http://getbootstrap.com">bootstrap</a>.</p>
+      </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+  </body>
+</html>
