more work on bootstrap

--- a/web/templates/gallery.html
+++ b/web/templates/gallery.html
@@ -7,7 +7,7 @@ $for(examples)$
   <div class="thumbnail">
     <img width="175" height="175" src="$thumburl$" title="$title$" />
     <div class="caption">
-      <center><small>$title$</small></center>
+      <center>$title$</center>
     </div>
   </div>
 </a>
