--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/css/jumbotron-narrow.css" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
     <link rel="shortcut icon" href="/diagrams.ico" />
@@ -30,15 +31,17 @@
           <a class="navbar-brand" href="#">Diagrams</a>
         </div>
         <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav pull-right">
             <li><a href="/">Home</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Docs <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation <b class="caret"></b></a>
               <ul class="dropdown-menu">
 		<li><a href="/download.html">Installation</a></li>
- 		<li><a href="/documentation.html">Tutorials</a></li>
+		<li class="divider" />
+ 		<li><a href="/tutorials.html">Tutorials</a></li>
 		<li><a href="/doc/manual.html">User manual</a></li>
-		<li><a href="/haddock/index.html">API reference</a></li>
+		<li><a href="/reference.html">Reference</a></li>
+		<li class="divider" />
 		<li><a href="http://haskell.org/haskellwiki/Diagrams">Wiki</a></li>
 		<li><a href="http://www.haskell.org/haskellwiki/Diagrams/FAQ">FAQ</a></li>
 		<li><a href="/releases.html">Releases</a></li>
@@ -51,7 +54,7 @@
 		<li><a href="http://webchat.freenode.net?channels=diagrams">IRC channel</a></li>
 		<li><a href="http://groups.google.com/group/diagrams-discuss">Mailing
 		    list</a></li>
-		<li><a href="/community.html">Bug trackers</a></li>
+		<li><a href="/community.html">Community</a></li>
               </ul>
             </li>
           </ul>
