make content narrower, and put todos, diagrams, etc. in panels.

--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -10,12 +10,14 @@
     <!-- Bootstrap -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/css/jumbotron-narrow.css" rel="stylesheet">
+    <link href="/css/jumbotron-narrow.css" rel="stylesheet" />
+    <link href="/css/doc.css" rel="stylesheet" />
 
     <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
     <link rel="shortcut icon" href="/diagrams.ico" />
 
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
   </head>
   <body>
 
