--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -51,12 +51,13 @@
             </li>
 	    <li><a href="/gallery.html">Gallery</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contact <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Community <b class="caret"></b></a>
 	      <ul class="dropdown-menu">
 		<li><a href="http://webchat.freenode.net?channels=diagrams">IRC channel</a></li>
 		<li><a href="http://groups.google.com/group/diagrams-discuss">Mailing
 		    list</a></li>
-		<li><a href="/community.html">Community</a></li>
+		<li><a href="/sightings.html">Sightings</a></li>
+		<li><a href="/community.html">Get involved</a></li>
               </ul>
             </li>
           </ul>
