use callouts for todo and warning, remove yellow fill from warning sign

--- a/web/css/doc.css
+++ b/web/css/doc.css
@@ -2,13 +2,15 @@
 div.todo:before {
     content: url(../doc/icons/ToWrite.$ext$);
     float: right;
-    padding: 20px;
+    padding-left: 20px;
+    padding-bottom: 20px;
 }
 
 div.warning:before {
     content: url(../doc/icons/Warning.$ext$);
     float: right;
-    padding: 20px;
+    padding-left: 20px;
+    padding-bottom: 20px;
 }
 
 div.exercises:before {
