nifty auto-collapsing auto-following sidebar TOCs stolen from bootstrap docs!

--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -87,5 +87,6 @@
 
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap-docs-application.js"></script>
   </body>
 </html>
