added blog link, and tags

--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -1,4 +1,10 @@
-$body$
+<article>
+<header>
+<p>by <em>$author$</em> on <strong>$date$</strong></p>
+<p>Tagged as: $prettytags$.</p>
+</header>
 
-Posted by: $author$
-Tagged: $tags$
+<section>
+$body$
+</section>
+</article>
