--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -49,7 +49,9 @@
               </ul>
 	    </li>
 	    <li><a href="/releases.html">Releases</a></li>
-	  </ul>
+        <li><a href="/blog.html">Blog</a></li>
+	   </ul>
+
         </div>
 
 	<div id="content">
