--- a/web/templates/blog.html
+++ b/web/templates/blog.html
@@ -5,4 +5,5 @@
     <p><a href="/posts.html">All posts</a></p>
     <h2>Tags</h2>
     <p>$taglist$</p>
+    <a href="/rss.xml"><img src="/images/rss.png" alt="rss"/></a>
 </section>
