added palette posts

--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -1,10 +1,8 @@
-<article>
-<header>
-<p>by <em>$author$</em> on <strong>$date$</strong></p>
-<p>Tagged as: $prettytags$.</p>
-</header>
+<div class="blog-header">
+    <p>by <em>$author$</em> on <strong>$date$</strong></p>
+    <p>Tagged as: $prettytags$.</p>
+</div>
 
-<section>
-$body$
-</section>
-</article>
+<div>
+    $body$
+</div>
