fixed templates for index

--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -49,7 +49,7 @@
               </ul>
 	    </li>
 	    <li><a href="/releases.html">Releases</a></li>
-        <li><a href="/blog.html">Blog</a></li>
+        <li><a href="/blog/index.html">Blog</a></li>
 	   </ul>
 
         </div>
