change /blog/index.html to /blob/

--- a/web/templates/blog.html
+++ b/web/templates/blog.html
@@ -1,4 +1,4 @@
-<section id="posts">
+<div class="blog-posts">
     <ul>
         $body$
     </ul>
@@ -6,4 +6,4 @@
     <h2>Tags</h2>
     <p>$taglist$</p>
     <a href="/rss.xml"><img src="/images/rss.png" alt="rss"/></a>
-</section>
+</div>
