--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -89,5 +89,6 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/bootstrap-docs-application.js"></script>
+    <script src="/js/panoramic.js"></script>
   </body>
 </html>
