--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -78,17 +78,17 @@
 
     </div> <!-- #wrap -->
 
-    <div id="footer">
+    <div  class="navbar navbar-fixed-bottom">
       <div class="container">
-	<p class="text-muted credit">Site built with
-	  using <a href="http://hackage.haskell.org/package/shake">shake</a>, <a href="http://jaspervdj.be/hakyll/">hakyll</a>,
-	  and <a href="http://getbootstrap.com">bootstrap</a>.</p>
+	      <p class="text-muted credit">Site built with
+	         using <a href="http://hackage.haskell.org/package/shake">shake</a>, <a href="http://jaspervdj.be/hakyll/">hakyll</a>,
+	         and <a href="http://getbootstrap.com">bootstrap</a>.
+        </p>
       </div>
     </div>
 
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/bootstrap-docs-application.js"></script>
-    <script src="/js/panoramic.js"></script>
   </body>
 </html>
