--- a/web/templates/exampleHi.html
+++ b/web/templates/exampleHi.html
@@ -3,7 +3,7 @@
 $description$
 
 <div class="exampleimg" style="text-align: center">
-<img src="$bigurl$" />
+<img src="$bigurl$" width="$width$" height="$height$" />
 </div>
 Author: <b><a href="$authorurl$">$author$</a></b>
 
