--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -76,7 +76,31 @@
         </div>
       </div>
     </div>
+    <div class="banner">
+      <div class="container"?
+      <div class="row">
+        <div class="col-md-5">
+      <h1 style="font-size: 9rem; padding-top: 110px">diagrams</h1>
+    </div>
+    <div class="col-md-7">
+      <pre style="background-color: rgba(0,0,0,0); border-width: 0px; font-size: 1.75rem;">
 
+
+        hilbert :: [Diagram B]
+        hilbert = iterate expand mempty
+          where
+            expand t =
+              let u = vcat [ t, alignT &#36 vrule 1
+                           , rotateBy (3/4) t ]
+              in      hcat [ u, hrule 1, reflectX u ]
+                           # alignBL
+
+        diagram :: Diagram B
+        diagram = hilbert !! 5
+     </pre>
+   </div>
+    </div>
+  </div>
     <div class="container" style="padding-top: 60px;">
       $body$
     </div>
