--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -14,6 +14,7 @@
     <link href="/css/callout.css" rel="stylesheet" />
     <link href="/css/doc.css" rel="stylesheet" />
     <link href="/css/bootstrap-docs.css" rel="stylesheet" />
+    <link href="/css/home.css" rel="stylesheet" />
 
     <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
     <link rel="shortcut icon" href="/diagrams.ico" />
