--- a/web/templates/beforeBanner.html
+++ b/web/templates/beforeBanner.html
@@ -81,7 +81,7 @@
       <div class="container">
       <div class="row">
         <div class="col-md-5">
-      <h1 style="font-size: 9rem; padding-top: 110px">diagrams</h1>
+      <h1 style="font-size: 9rem; padding-top: 100px; color: darkred">diagrams</h1>
     </div>
     <div class="col-md-7">
       $body$
