--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Diagrams</a>
+          <a class="navbar-brand" href="/">diagrams</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav pull-right">
