--- a/web/css/home.css
+++ b/web/css/home.css
@@ -3,8 +3,10 @@
 .lead-panel {
     min-height: 100pt;
     max-height: 100pt;
+    cursor: pointer;
+    background-color: #e6e6e6;
 }
 
 .lead-panel:hover {
-  background: aliceblue;
+  background: lightgray;
 }
