bit of menu reorganization

--- a/web/templates/beforeBanner.html
+++ b/web/templates/beforeBanner.html
@@ -47,11 +47,11 @@
 		<li class="divider" />
  		<li><a href="/tutorials.html">Tutorials</a></li>
 		<li><a href="/doc/manual.html">User manual</a></li>
-		<li><a href="/reference.html">Reference</a></li>
+                <li><a href="/haddock/index.html">API reference (Haddocks)</a></li>
+                <li><a href="/doc/core.html">Core library reference</a></li>
 		<li class="divider" />
 		<li><a href="http://haskell.org/haskellwiki/Diagrams">Wiki</a></li>
-		<li><a href="http://www.haskell.org/haskellwiki/Diagrams/FAQ">FAQ</a></li>
-		<li><a href="/releases.html">Releases</a></li>
+		<li><a href="/releases.html">Releases / changelogs</a></li>
               </ul>
             </li>
 	    <li><a href="/gallery.html">Gallery</a></li>
@@ -61,6 +61,7 @@
 		<li><a href="http://webchat.freenode.net?channels=diagrams">IRC channel</a></li>
 		<li><a href="http://groups.google.com/group/diagrams-discuss">Mailing
 		    list</a></li>
+                <li><a href="https://github.com/diagrams">Github</a></li>
 		<li><a href="/sightings.html">Sightings</a></li>
 		<li><a href="/community.html">Get involved</a></li>
               </ul>
