Remove duplication in default and beforeBanner, fix title.

--- a/web/templates/beforeBanner.html
+++ b/web/templates/beforeBanner.html
@@ -26,7 +26,7 @@
 
     <div id="wrap">
 
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar $navbarStyle$ navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -78,17 +78,7 @@
         </div>
       </div>
     </div>
-    <div class="banner">
-      <div class="container">
-      <div class="row">
-        <div class="col-md-5">
-      <h1 style="font-size: 9rem; padding-top: 100px; color: darkred">diagrams</h1>
-    </div>
-    <div class="col-md-7">
-      $body$
-   </div>
-    </div>
-  </div>
+    $body$
     <div class="container" style="padding-top: 60px;">
       $template$
     </div>
