--- a/web/templates/banner.html
+++ b/web/templates/banner.html
@@ -4,7 +4,7 @@
       <div class="col-md-5">
         <h1 style="font-size: 9rem; padding-top: 100px; color: darkred">diagrams</h1>
       </div>
-      <div class="col-md-7 hidden-sm hidden-xs">
+      <div class="col-md-7 hidden-sm hidden-xs hidden-md">
         $body$
       </div>
     </div>
