add CC BY 4.0 license to blog

--- a/web/templates/blog.html
+++ b/web/templates/blog.html
@@ -6,4 +6,7 @@
     <h2>Tags</h2>
     <p>$taglist$</p>
     <a href="/rss.xml"><img src="/images/rss.png" alt="rss"/></a>
+    <p>All posts licensed under
+    a <a href="http://creativecommons.org/licenses/by/4.0/">Creative
+    Commons Attribution 4.0 International</a> license.</p>
 </div>
