Update mathjax url. mathjax.org no longer a cdn
https://www.mathjax.org/cdn-shutting-down/

Also, changed http to https

--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
     <link rel="shortcut icon" href="/diagrams.ico" />
 
-    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/mathjax/MathJax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     $bannerCSS$
   </head>
   <body>
